syntax = "proto3";

import "google/api/annotations.proto";

service AuthControllerProto {
  rpc Register(AuthRegisterRequest) returns (AuthRegisterResponse) {
    option (google.api.http) = {
      post: "/v1/Auth/Register"
    };
  }
  rpc Login(AuthLoginRequest) returns (AuthLoginResponse) {
    option (google.api.http) = {
      post: "/v1/Auth/Login"
    };
  }
}

message AuthLoginRequest {
  string email = 1;
  string password = 2;
}

message AuthLoginResponse {
  bool success = 1;
  optional string token = 2;
}

message AuthRegisterRequest {
  string userName = 1;
  string email = 2;
  string password = 3;
}

message AuthRegisterResponse {
  bool success = 1;
}